  other ports, but this can be unexpected for the applications not expecting
  their idle handlers to be called from inside wxYield().

- Creating wxBitmap with 0 width or height now always fails in all ports
  (it used to succeed in wxMSW).

- Using invalid flags with wxBoxSizer or wxGridSizer items now triggers asserts
  when done from the code or error messages when done in XRC.

- wxOSX/Carbon port doesn't exist any more, wxOSX/Cocoa will be silently used
  instead even if configure --with-osx_carbon option is used.

Changes in behaviour which may result in build errors
-----------------------------------------------------

- "webview" library is not included in `wx-config --libs` output any more, you
  need to request it explicitly, e.g. `wx-config --libs std,webview`.

- wxMSW now requires linking with shlwapi.lib and version.lib. This is done
  automatically in most cases, but if you use a static build of the library
  with a non-MSVC compiler such as MinGW and do not use wx-config, then you
  will need to add these libraries to your make or project files yourself.

- WXWIN_OS_DESCRIPTION doesn't exist any longer, use wxGetOsDescription().


3.1.0: (released 2016-xx-xx)
----------------------------

- Many improvements for high DPI monitors support, notably XRC now interprets
  all pixel values as being in resolution-independent pixels.

- wxQt branch implementing Qt5-based port of wxWidgets API was merged into
  the trunk (Mariano Reingart, Google Summer of Code project).

- Added wxNativeWindow allowing to embed native widgets in wxWidgets programs.

All:

- Add UTF-8 and ZIP 64 support to wxZip{Input,Output}Stream (Tobias Taschner).
- Upgrade libpng to 1.6.21 fixing several security bugs (Paul Kulchenko).
- Add wxStandardPaths::GetUserDir() (Tobias Taschner).
- Allow calling wxItemContainer::Add() and similar with std::vector<> argument.
- Add "%z" support to printf()-like functions like wxString::Format() (RIVDSL).